--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./3.component/SearchResult";
 @import "./3.component/TechnologyTags";
 @import "./3.component/CaseStudySection";
+@import "./3.component/swiper";
 
 
 @import "./5.pages/home";
