--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -1,3 +1,85 @@
+.search_result_container {
+  display: flex;
+  align-items: flex-start;
+
+  &-filterContainer {
+    position: relative;
+    margin-right: 0.8rem;
+    width: 20%;
+    transition: all 0.5s linear;
+
+    .filters .ant-collapse-item {
+      opacity: 1;
+      transition: all 0.5s linear;
+    }
+
+    .filters .filters_collapse_container {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      border-radius: 1rem;
+      opacity: 0;
+      transition: all 0.2s linear;
+
+      &_iconContainer {
+        width: 100%;
+        height: 5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &-icon {
+        }
+      }
+
+      &_textContainer {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &-text {
+          writing-mode: vertical-rl;
+          text-orientation: upright;
+          font-size: 2rem;
+          letter-spacing: 1rem;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+
+  &-resultContainer {
+    flex: 1;
+  }
+
+  &-HideShowFilter {
+    position: absolute;
+    top: 50%;
+    right: -1.6rem;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.hideFilter.search_result_container {
+  &-filterContainer {
+    width: 5%;
+
+    .filters .ant-collapse-item {
+      opacity: 0;
+    }
+
+    .filters .filters_collapse_container {
+      opacity: 1;
+    }
+  }
+}
+
 .search_result {
   margin-bottom: 1rem;
 
