--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./3.component/TechnologyTags";
 @import "./3.component/CaseStudySection";
 @import "./3.component/swiper";
+@import "./3.component/RoundCornerModal";
 
 
 @import "./5.pages/home";
